--- a/Antonino.Tests/App.config
+++ b/Antonino.Tests/App.config
@@ -5,7 +5,11 @@
 -->
 <configuration>
     <appSettings>
-
+      <add key="DBName" value="DBName" />
+      <add key="Username" value="Username" />
+      <add key="Password" value="Password" />
+      <add key="Host" value="Host" />
+      <add key="Port" value="13000" />
     </appSettings>
 
     <connectionStrings>
