--- a/Antonino.Tests/Antonino.Tests.csproj
+++ b/Antonino.Tests/Antonino.Tests.csproj
@@ -96,7 +96,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IDataBaseTest.cs" />
-    <Compile Include="Mocks\MockOrderController.cs" />
+    <Compile Include="MongoDbConfigTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
   </ItemGroup>
