--- a/Antonino/Antonino.Web.csproj
+++ b/Antonino/Antonino.Web.csproj
@@ -166,6 +166,7 @@
     <Compile Include="Infrastructure\Concrete\FormsAuthProvider.cs" />
     <Compile Include="Infrastructure\NinjectdependencyResolver.cs" />
     <Compile Include="Models\LoginViewModel.cs" />
+    <Compile Include="Models\NotEnoughToysInStorageException.cs" />
     <Compile Include="Models\Order.cs" />
     <Compile Include="Models\OrderedToy.cs" />
     <Compile Include="Models\Orders.cs" />
@@ -218,6 +219,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Scripts\CustomScripts\" />
     <Folder Include="Views\Order\" />
     <Folder Include="Views\Toy\" />
   </ItemGroup>
