--- a/Antonino.Tests/Antonino.Tests.csproj
+++ b/Antonino.Tests/Antonino.Tests.csproj
@@ -117,6 +117,7 @@
     <Compile Include="Mocks\MongoConnectionMock.cs" />
     <Compile Include="MongoConnectionTest.cs" />
     <Compile Include="MongoDbConfigTest.cs" />
+    <Compile Include="MongoDBTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
   </ItemGroup>
