--- a/Antonino.Tests/Antonino.Tests.csproj
+++ b/Antonino.Tests/Antonino.Tests.csproj
@@ -113,6 +113,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\AccountControllerTest.cs" />
     <Compile Include="IDataBaseTest.cs" />
     <Compile Include="Mocks\MongoConnectionMock.cs" />
     <Compile Include="MongoConnectionTest.cs" />
